--- a/src/app/(games)/wisielec/styles.module.scss
+++ b/src/app/(games)/wisielec/styles.module.scss
@@ -68,7 +68,7 @@ $form-margin: 1.25rem;
   border-bottom: 1px solid var(--black);
 
   &::before {
-    content: "";
+    content: '';
     opacity: 90%;
     position: absolute;
     top: 0;
