--- a/src/app/(games)/familiada/styles.module.scss
+++ b/src/app/(games)/familiada/styles.module.scss
@@ -29,7 +29,9 @@
     padding: 14px 32px;
     background-color: var(--primary);
     border-radius: 30px;
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-1.5px);
@@ -122,7 +124,7 @@ $form-margin: 1.25rem;
   border-bottom: 1px solid var(--black);
 
   &::before {
-    content: "";
+    content: '';
     opacity: 90%;
     position: absolute;
     top: 0;
@@ -371,7 +373,7 @@ $form-margin: 1.25rem;
       padding-left: 1.5rem;
 
       &::before {
-        content: "•";
+        content: '•';
         position: absolute;
         left: 0;
       }
