--- a/src/app/(games)/pnm/board/styles.module.scss
+++ b/src/app/(games)/pnm/board/styles.module.scss
@@ -155,7 +155,9 @@
     font-weight: bold;
     background-color: #cdd0e2;
     border-radius: 1.5vw;
-    transition: transform 200ms ease-in-out, top 300ms ease-in;
+    transition:
+      transform 200ms ease-in-out,
+      top 300ms ease-in;
 
     p {
       color: #060512;
@@ -312,7 +314,9 @@
 
   h3 {
     color: #020001;
-    text-shadow: #020001 0 0 0.15vw, #ffffff 0 0 0.25vw;
+    text-shadow:
+      #020001 0 0 0.15vw,
+      #ffffff 0 0 0.25vw;
   }
 
   .additionalTime {
@@ -356,14 +360,14 @@
 
   .questionImage {
     z-index: 2;
-    background-image: url("/pnm/images/trap-question.webp");
+    background-image: url('/pnm/images/trap-question.webp');
     background-size: contain;
     background-repeat: no-repeat;
   }
 
   .answersImage {
     z-index: 1;
-    background-image: url("/pnm/images/trap-answers.webp");
+    background-image: url('/pnm/images/trap-answers.webp');
     background-size: contain;
     background-repeat: no-repeat;
   }
