--- a/src/app/(games)/pnm/styles.module.scss
+++ b/src/app/(games)/pnm/styles.module.scss
@@ -29,7 +29,9 @@
     padding: 14px 32px;
     background-color: var(--primary);
     border-radius: 30px;
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-1.5px);
@@ -122,7 +124,7 @@ $form-margin: 1.25rem;
   border-bottom: 1px solid var(--black);
 
   &::before {
-    content: "";
+    content: '';
     opacity: 90%;
     position: absolute;
     top: 0;
@@ -200,15 +202,14 @@ $form-margin: 1.25rem;
   align-items: center;
   gap: 0.75rem;
 
-  input[type="radio"] {
+  input[type='radio'] {
     $size: 20px;
     $color: #5bb4f0;
 
     padding: calc($size / 7);
     width: $size;
     aspect-ratio: 1/1;
-    background: radial-gradient(farthest-side, $color 94%, #0000) 50%/0 0
-      no-repeat content-box;
+    background: radial-gradient(farthest-side, $color 94%, #0000) 50%/0 0 no-repeat content-box;
     border-radius: 30px;
     border: calc($size / 9) solid #939393;
     transition: all 200ms ease;
