--- a/src/app/(games)/quizy/board/[id]/styles.module.scss
+++ b/src/app/(games)/quizy/board/[id]/styles.module.scss
@@ -82,7 +82,9 @@
 
   button {
     background-color: rgba(#ffffff, 0.1);
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-0.15vw);
@@ -106,7 +108,9 @@
     aspect-ratio: 1/1;
     border-radius: 100%;
     pointer-events: all;
-    transition: opacity 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      opacity 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       opacity: 60%;
@@ -148,7 +152,9 @@
     font-size: 2vw;
     border-radius: 1vw;
     background-color: rgba(#ffffff, 0.15);
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-0.15vw);
@@ -184,7 +190,9 @@
     min-height: 12vw;
     font-size: 105%;
     border-radius: 0.5vw;
-    transition: background-color 150ms ease-out, filter 150ms ease-out,
+    transition:
+      background-color 150ms ease-out,
+      filter 150ms ease-out,
       transform 150ms ease-in-out;
 
     &.correct {
