--- a/src/app/(games)/wisielec/board/[id]/styles.module.scss
+++ b/src/app/(games)/wisielec/board/[id]/styles.module.scss
@@ -81,7 +81,9 @@
 
   button {
     background-color: rgba(#ffffff, 0.1);
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-0.15vw);
@@ -105,7 +107,9 @@
     aspect-ratio: 1/1;
     border-radius: 100%;
     pointer-events: all;
-    transition: opacity 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      opacity 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       opacity: 60%;
@@ -147,7 +151,9 @@
     font-size: 2vw;
     border-radius: 1vw;
     background-color: rgba(#ffffff, 0.15);
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-0.15vw);
