--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -68,7 +68,9 @@ header {
     padding: 0 $button-side;
     height: 100%;
     border-radius: 6px;
-    transition: all 200ms ease, filter 150ms ease-out,
+    transition:
+      all 200ms ease,
+      filter 150ms ease-out,
       transform 150ms ease-in-out;
 
     &:hover {
@@ -270,7 +272,9 @@ main {
     padding: 14px 32px;
     background-color: var(--primary);
     border-radius: 30px;
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-1.5px);
