--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,7 +9,9 @@
     width: 16rem;
     background-color: var(--primary);
     border-radius: 30px;
-    transition: filter 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      filter 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       transform: translateY(-1.5px);
