--- a/src/styles/dashboard.module.scss
+++ b/src/styles/dashboard.module.scss
@@ -53,7 +53,9 @@
       padding: 14px 32px;
       background-color: var(--primary);
       border-radius: 30px;
-      transition: filter 150ms ease-out, transform 150ms ease-in-out;
+      transition:
+        filter 150ms ease-out,
+        transform 150ms ease-in-out;
 
       &:hover {
         transform: translateY(-1.5px);
@@ -126,7 +128,9 @@
     gap: 1rem;
     border-radius: 6px;
     background-color: var(--background);
-    transition: opacity 150ms ease-out, transform 150ms ease-in-out;
+    transition:
+      opacity 150ms ease-out,
+      transform 150ms ease-in-out;
 
     &:hover {
       opacity: 90%;
